[package]
name = "raytracing-fixed-point"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
num-traits = "*"
rand = {version = "*", features = ["small_rng"]}
lazy_static = "*"
mut_static = "*"
smallvec = "*"
ordered-float = "*"
rand_distr = "*"
micromath = "*"

[rust]
debuginfo-level = 1

[profile.release]
#debug = 1
#lto = true
#panic = "abort"

