[package]
name = "raytracing-fixed-point"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = {version = "*", features = ["png"]}
num-traits = "*"
rand = {version = "*", features = ["small_rng"]}
#lazy_static = "*"
#mut_static = "*"
#smallvec = "*"
ordered-float = "*"
rand_distr = "*"
#micromath = "*"
#array-concat = "*"
rayon = "*"
#thread_local = "*"


#[rust]
#debuginfo-level = 1

[profile.release]
#lto = "fat"
#codegen-units = 1
#panic = "abort"

#debug = 2
#lto = true
#panic = "abort"

